Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5855

QDirModel / QFileSystemModel do not move directories on drag&drop operations

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.2
    • 4.5.1
    • Widgets: Itemviews
    • None
    • a6eb1a3ef2c897f1ebca01a7d7bd1a073799e737

      Using Drag & Drop on QDirModel / QFileSystemModel doesn't work well on Linux:
      The model allows move operations on files and directories. But on directories a move operation doesn't work.

      Suggestion: The straight forward implementation on Linux would be to use rename() which is much faster then a copy()/remove() and would not care if it is a file or a directory.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            menard Alexis Menard (closed Nokia identity) (Inactive)
            cyril Harald Prasser
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes