Use QFile:rename when moving items in QFileystemModel.

We got for free the recursive move if the directory that we move has
subdirectories. Unfortunately copying a directory to an another is
not easy in Qt so the copy still doesn't work if the directory contains
directories.

Task-number:QTBUG-5855
Reviewed-by:ogoffart